--- a/mm-manager/pom.xml
+++ b/mm-manager/pom.xml
@@ -25,11 +25,11 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
-        <dependency>
-            <groupId>cn.geterror</groupId>
-            <artifactId>mm-net</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cn.geterror</groupId>-->
+<!--            <artifactId>mm-net</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
